crates/sith_python_parser/src/parser/snapshots/sith_python_parser__parser__tests__expr_mode_invalid_syntax3.snap
---
source: crates/sith_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: UnexpectedExpressionToken,
    location: 7..13,
}
