crates/sith_python_parser/src/parser/snapshots/sith_python_parser__parser__tests__unicode_aliases.snap
---
source: crates/sith_python_parser/src/parser/tests.rs
expression: suite
---
[
    Assign(
        AssignStmt {
            range: 0..37,
            targets: [
                Name(
                    NameExpr {
                        range: 0..1,
                        id: Name("x"),
                        ctx: Store,
                    },
                ),
            ],
            value: StringLiteral(
                StringLiteralExpr {
                    range: 4..37,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 4..37,
                                value: "\u{8}another cool trick",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
